--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,6 @@
 project(cpp_mod1)
+set(CMAKE_CXX_COMPILER "clang++")
+set(CMAKE_CXX_FLAGS "-Wall -Wextra -Werror -std=c++03")
 add_subdirectory(ex00)
 add_subdirectory(ex02)
 add_subdirectory(ex03)
