--- a/ex02/CMakeLists.txt
+++ b/ex02/CMakeLists.txt
@@ -1,2 +1,2 @@
-project(zombie)
-add_executable(zombie main.cpp Zombie.cpp Zombie.hpp ZombieEvent.cpp ZombieEvent.hpp)
+project(ex02)
+add_executable(ex02 main.cpp Zombie.cpp Zombie.hpp ZombieEvent.cpp ZombieEvent.hpp)
