--- a/ex03/CMakeLists.txt
+++ b/ex03/CMakeLists.txt
@@ -1,2 +1,2 @@
-project(zombiehorde)
-add_executable(zombie main.cpp Zombie.cpp Zombie.hpp ZombieHorde.cpp ZombieHorde.hpp)
+project(ex03)
+add_executable(ex03 main.cpp Zombie.cpp Zombie.hpp ZombieHorde.cpp ZombieHorde.hpp)
